fix: switch to PostgreSQL driver